titulo - hola Github

--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <title>Bueno nombre</title>
+    <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <div class="contenedor"></div>
+    <div class="contenedor">
+        <h1>hola GitHub</h1>
+    </div>
 </body>
 </html>
