--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="contenedor">
-        <h1>hola GitHub</h1>
+        <h1>HOLA GITHUB</h1>
     </div>
 </body>
 </html>
